--- a/html/reset.html
+++ b/html/reset.html
@@ -5,28 +5,34 @@
     <title>Reset</title>
     <style>
         * {
+            margin:0; padding:0;
+        }
+    </style>
+    <!--    <style>-->
+    <!--        * {-->
 
-        }
-        html {
-            font-size:24px
-        }
-        textarea {
-            font-size: inherit;
-        }
-        h1 {
-            font-size: ;
-        }
+    <!--        }-->
+    <!--        html {-->
+    <!--            font-size:24px-->
+    <!--        }-->
+    <!--        textarea {-->
+    <!--            font-size: inherit;-->
+    <!--        }-->
+    <!--        h1 {-->
+    <!--            font-size: ;-->
+    <!--        }-->
     </style>
 </head>
 <body>
 <h1>Heading</h1>
+<h2>Heading 2</h2>
 <table>
-  <th>th</th>
-  <td>td</td>
+    <th>th</th>
+    <td>td</td>
 </table>
 <form>
-  <textarea>textarea</textarea><br>
-  <button>button</button>
+    <textarea>textarea</textarea><br>
+    <button>button</button>
 </form>
 </body>
 </html>
